add publishing of RobotMoveType message on button click

--- a/src/robo_collector/robo_collector_controller/config/params.yaml
+++ b/src/robo_collector/robo_collector_controller/config/params.yaml
@@ -17,6 +17,6 @@
     ros2_executor_threads_num: 4
     
     use_local_controller_mode: True
-    user: not_set
-    repository: not_set
+    user: tsvm
+    repository: https://github.com/tsvm/robotics_v1
     commit_sha: not_set
